// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton renders correctly 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":r0:"
    aria-describedby=":r0:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment large 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-yx3eqr-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-yx3eqr-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-yx3eqr-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-yx3eqr-StyledGhostButton:hover,
.css-yx3eqr-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":r4:"
    aria-describedby=":r4:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-yx3eqr-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment medium 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-oqrlmz-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  padding: 0 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-oqrlmz-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-oqrlmz-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-oqrlmz-StyledGhostButton:hover,
.css-oqrlmz-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":r3:"
    aria-describedby=":r3:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-oqrlmz-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":r6:"
    aria-describedby=":r6:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-1xcp86l-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment primary 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":r5:"
    aria-describedby=":r5:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment small 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":r2:"
    aria-describedby=":r2:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment xsmall 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-12e3oot-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-12e3oot-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-12e3oot-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-12e3oot-StyledGhostButton:hover,
.css-12e3oot-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":r1:"
    aria-describedby=":r1:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-12e3oot-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with bordered 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-9jv194-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.css-9jv194-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-9jv194-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-9jv194-StyledOutlinedButton:hover,
.css-9jv194-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":r8:"
    aria-describedby=":r8:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-9jv194-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom class name 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":rb:"
    aria-describedby=":rb:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="custom-class css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copied text 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":ra:"
    aria-describedby=":ra:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copy text 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":r9:"
    aria-describedby=":r9:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with no border 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-controls=":r7:"
    aria-describedby=":r7:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
